--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
-   background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+   background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
 }
 
 /* Modal Content (Image) */
@@ -63,8 +63,8 @@
 /* The Close Button */
 .close {
    position: absolute;
-   top: 15px;
-   right: 35px;
+   top: 60px;
+   right: 71px;
    color: #f1f1f1;
    font-size: 40px;
    font-weight: bold;
@@ -97,4 +97,13 @@
 }
 #aboutUs{
   background-color: #bce5f6;
+}
+body {
+  font-family: 'Oswald', sans-serif;
+}
+
+hr {
+	height: 10px;
+	border: 0;
+	box-shadow: 0 10px 10px -10px #8c8b8b inset;
 }
